# PrestesOS

./: AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  MASTER_SPEC.md  PROMPTS_CODEX.md  README.md  README_GOVERNANCE.md  ROADMAP.md  TASKS.md  pyproject.toml
.ai/: ARCHITECT.md  CHATGPT.md  CODEX.md  DOCUMENTATION.md  ENGINEERING.md  PRODUCT.md  QA.md  RELEASE.md  SECURITY.md
docs/adr/: ADR-001-plataforma-modular.md
scripts/: install_termux.sh
src/prestes_os.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/prestes_os/audio/: audio_service.py
src/prestes_os/core/: main.py
src/prestes_os/services/: ai_service.py  calendar_service.py  config_service.py  database_service.py  event_bus.py  gmail_service.py  log_service.py  notebooklm_service.py  planning_service.py  platform_service.py  search_service.py  sync_service.py  transcription_service.py
tests/: conftest.py  test_ai_service.py  test_audio_service.py  test_calendar_service.py  test_cli_smoke.py  test_config_service.py  test_database_service.py  test_event_bus.py  test_gmail_service.py  test_log_service.py  test_notebooklm_service.py  test_planning_service.py  test_platform_service.py  test_search_service.py  test_sync_service.py  test_transcription_service.py
